--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,11 @@
 	margin: 0px 0px 10px 0px;
 
 }
+.overflow_auto{
+	max-height: 100px;
+	overflow: auto;
+}
+
 .image{
 	max-width: 750px;
 	display: block;
